--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.kristha.com.np">kristha</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created By <a href="https://www.sthakrishna.com.np">stha-lx</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
